# NaVILA_rcvlab

./: README.md  api.md  todo.md
.github/workflows/: docker-build.yml
.omo/run-continuation/: ses_19ba28cc3ffea7MuXn4avSz3P9.json  ses_1b7345ef9ffee9z96tYqcl6LY9.json
deploy/: DEPLOYMENT.md  Dockerfile  Dockerfile.jetson  Dockerfile.server  OLI_DEPLOYMENT.md  create_stubs.sh  docker-compose.oli-debug.yml  docker-compose.oli-remote.yml  docker-compose.oli-single.yml  docker-compose.oli.yml  docker-compose.server.yml  docker-compose.yml  entrypoint.sh  fastdds_no_shm.xml  use.md
deploy/inference_server/: planner.py  server.py
deploy/limx_bridge/: package.xml  setup.py
deploy/limx_bridge/config/: limx_params.yaml
deploy/limx_bridge/launch/: limx.launch.py
deploy/limx_bridge/limx_bridge/: bridge_node.py
deploy/navila_client/: package.xml  setup.cfg  setup.py
deploy/navila_client/config/: client_params.yaml
deploy/navila_client/launch/: client.launch.py
deploy/navila_core/: package.xml  setup.cfg  setup.py
deploy/navila_msgs/: CMakeLists.txt  package.xml
deploy/navila_msgs/msg/: Action.msg  Observation.msg  RobotState.msg  SystemStatus.msg
deploy/navila_msgs/srv/: SetInstruction.srv  SetMode.srv
deploy/oli_bridge/: package.xml  setup.cfg  setup.py
deploy/oli_bridge/config/: oli_params.yaml
deploy/oli_bridge/launch/: all.launch.py  oli.launch.py
deploy/oli_bridge/oli_bridge/: bridge_node.py
llava/model/: builder.py
oli-panel/: README.md  index.html  package-lock.json  package.json  server.cjs  start.sh  stop.sh  vite.config.ts
oli-panel/src/: App.css  App.tsx  index.css
server/: app.py  compare_instructions.py  inference.py  planner.py  run_server.sh  test_api.py  test_sap.py
server/frontend/: index.html  package-lock.json  package.json  vite.config.ts
server/static/: index.html
(+25 files in other folders)
