<?xml version="1.0"?>
<package format="3">
  <name>limx_bridge</name>
  <version>0.1.0</version>
  <description>LimX Dynamics robot bridge for NaVILA standard interface</description>
  <maintainer email="soul667@github.com">soul667</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>navila_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
